[package]
name = "wince-tp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-deque = "0.8"
num_cpus = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "spawn"
harness = false

[[bench]]
name = "spawn_chain"
harness = false

[profile.bench]
debug = true
